--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.0
-python-jose==3.3.0
+fastapi
+uvicorn[standard]
+gunicorn
+httpx>=0.24
+python-multipart
